--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,14 @@
+# 事件
 on:
   push
 
+# 工作
 jobs:
- job1:
-
-steps:
+  job1:
+    steps:
+      - run: pwd
+      - run: ls
+  job2:
+    steps:
+      - run: node -v
+      - run: ./gradlew -v
