--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,26 @@ on:
 # 工作
 jobs:
   ci:
+    name: build java project
     runs-on: ubuntu-latest
     steps:
-      - run: gradle -version
-      - run: java -version
+      - name: fetch branch content
+        uses: actions/checkout@v4
+
+      - name: install java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+        run: java -version
+
+      - name: build with gradle
+        run: ./gradlew build
+
+      - name: build with Spring Boot
+        run: ./gradle bootJar
+
+      - name: run Spring Boot app
+        run: ./gradle bootRun
+
+
