--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,8 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '17'
+
+      - name: check java version
         run: java -version
 
       - name: build with gradle
