--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,13 +20,16 @@ jobs:
       - name: check java version
         run: java -version
 
+      - name: check current directory
+        run: ls -la
+
       - name: build with gradle
-        run: ./gradlew build
+        run: sudo ./gradlew build
 
       - name: build with Spring Boot
-        run: ./gradle bootJar
+        run: sudo ./gradle bootJar
 
       - name: run Spring Boot app
-        run: ./gradle bootRun
+        run: sudo ./gradle bootRun
 
 
