--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: check current directory
         run: ls -la
 
+      - name: check gradle version
+        run: sudo ./gradlew -version
+
       - name: build with gradle
         run: sudo ./gradlew build
 
