--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,8 @@
 on:
   push
 
-permissions: write-all
+permissions:
+  contents: write
 
 # 工作
 jobs:
@@ -64,5 +65,21 @@ jobs:
         run: kill $(lsof -t -i:8080)
         shell: bash
 
+  push-docker-hub:
+    needs: ci
+    runs-on: ubuntu-latest
+    steps:
+      - name: fetch branch content
+        uses: actions/checkout@v4
 
+      - name: connect docker
+        uses: docker/login-action@v3
+        with:
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
 
+      - name: push docker repository
+        uses: docker/build-push-action@v6
+        with:
+          push: 'true'
+          tags: yihao0826/practice-devops:latest
