--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -72,6 +72,15 @@ jobs:
       - name: fetch branch content
         uses: actions/checkout@v4
 
+      - name: install java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: check java version
+        run: java -version
+
       - name: check current directory
         run: ls -la
 
