--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,11 @@ tasks.named("bootRun") {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+bootJar {
+    enabled = true
+}
+
+jar {
+    enabled = false
+}
