--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -90,6 +90,9 @@ jobs:
       - name: check current directory
         run: ls -la
 
+      - name: check jar Exists
+        run:  ls build/libs | grep '\.jar$'
+
       - name: connect docker
         uses: docker/login-action@v3
         with:
