--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,7 @@ permissions:
 # 工作
 jobs:
   ci:
-    name: build java project
+    name: build and test java project
     runs-on: ubuntu-latest
     steps:
       - name: fetch branch content
@@ -106,6 +106,7 @@ jobs:
           tags: yihao0826/practice-devops:latest
 
   cd:
+    name: deploy java project
     needs: push-docker-hub
     runs-on: ubuntu-latest
     steps:
